# stellar-cli-docker

./: .dockerignore  .hadolint.yaml  .shellcheckrc  Dockerfile  README.md  RELEASE.md  SECURITY.md  builds.json  builds.schema.json  pyproject.toml  tag_info.txt  tags.csv
.github/workflows/: build.yml  ci.yml  lint.yml  publish.yml  release.yml
docker/: README.md
scripts/: build-image.sh  build_image.py  newest-pair.sh  newest_pair.py  publish_aliases.py  publish_manifests.py  refresh-rust-digests.sh  refresh-stellar-cli-digests.sh  refresh.py  refresh_rust_digests.py  refresh_stellar_cli_digests.py  release-body.sh  release-prepare.sh  release-push-branch.sh  release_body.py  release_pr_body.py  release_prepare.py  release_push_branch.py  repro-test.sh  repro_test.py  resolve-matrix.sh  resolve_matrix.py  smoke-test-image.sh  smoke_test_image.py  tag-names.sh  tag_names.py  validate-json.sh  validate-shell.sh  validate_json.py  verify-image.sh  verify_image.py  write_metadata.py
scripts/lib/: builds.py  common.py  common.sh  docker_inspect.py  gh_cli.py  git_remote.py  runner.py  rust_keys.py  semver.py
tests/: conftest.py
tests/fixtures/: builds_invalid_entry.json  builds_minimal.json  builds_multi_cli.json  builds_orphan_rust.json  builds_unpinned.json  builds_unpinned_refs.json  builds_unsorted_keys.json  meta_amd64.json  meta_arm64.json  rust_hub_tags.json
tests/integration/: test_refresh.py  test_refresh_rust_digests.py  test_refresh_stellar_cli_digests.py  test_release_prepare.py
tests/unit/: test_build_image.py  test_builds.py  test_common.py  (+20 more)
