[project]
name = "stellar-cli-docker"
version = "0.0.0"
description = "Build and publish scripts for the stellar-cli Docker images."
requires-python = ">=3.14"
dependencies = [
    "jsonschema>=4.21",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-ra"
