[project]
name = "stellar-cli-docker"
version = "0.0.0"
description = "Build and publish scripts for the stellar-cli Docker images."
requires-python = ">=3.14"
dependencies = [
    "jsonschema>=4.21",
    "semver>=3.0.4",
]

[dependency-groups]
# pytest is capped below 8.4 because that release made `pygments` a hard
# runtime dependency, and the pygments sdist bundles GPL-licensed syntax-
# highlighter test fixtures that trip the org's Socket license policy.
# pytest 8.3.x covers every feature this project uses.
dev = [
    "pytest>=8.0,<8.4",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-ra"
